* Going to the Bootstrap state is now supported by the state machines and the
  command-line tool.
* Added ecrt_open_master() and ecrt_master_reserve() separation for
  the userspace libary (thanks to Martin Troxler).
* Added ecrt_master() userspace interface, to get information about a
  master (thanks to Martin Troxler).
* Introduced ecrt_master_slave() to get information about a certain slave.
* SDO entry access rights are shown in 'ethercat sdos'.
* Added 64-bit data access macros to application header.
* Added debug level for all masters as a module parameter. Thanks to Erwin
  Burgstaller.
* Clear slave list on link down.
* Output device link state in 'ethercat master'.
* Added 'ethercat graph' command which outputs the bus topology in
  DOT language.
* Added ecrt_slave_sdo_upload() and ecrt_slave_sdo_download() methods to let
  an application transfer SDOs before activating the master. Thanks to Stefan
  Weiser.
* Changed EC_MAX_SII_SIZE to 4096.
* 'ethercat xml' creates valid XML <EtherCATInfoList> for more than one slave
  (thanks to E. Burgstaller).
* Module symbol versions file for ec_master.ko is installed to
  prefix/modules/ec_master.symvers.
* Added 'ethercat eoe' command to display Ethernet over EtherCAT statistics.
* Significantly improved EoE bandwidth by running EoE processing in a kthread.

Changes in 1.4.0:

* Fixed race condition in jiffy-based frame timeout calculation.
* Fixed race condition concerning the ec_slave_config_state->operational flag.
* Fixed wrong calculation of the expected working counter if the process data
  of a domain span several datagrams.
* Fixed a kernel oops when a slave configuration is detached while the actual
  configuration is in progress.
* Fixed typo in logging output.
* Removed 'bashisms' from init script ('function' keyword).
* Fixed bug in e1000 drivers. Memory was allocated when sending the first
  frame.
* Modified licence headers to avoid conflicts with the GPL.
* Restricted licence to GPLv2 only.